@@ -1,4 +1,4 @@
-.TH "FST2VCD" "1" "3.2.2" "Anthony Bybell" "Filetype Conversion"
+.TH "FST2VCD" "1" "3.3.29" "Anthony Bybell" "Filetype Conversion"
 .SH "NAME"
 .LP 
 fst2vcd \- Converts FST files to VCD
@@ -7,13 +7,16 @@ fst2vcd \- Converts FST files to VCD
 fst2vcd [\fIoption\fP]... [\fIFSTFILE\fP]
 .SH "DESCRIPTION"
 .LP 
-Converts FST files to VCD files on stdout.  
+Converts FST files to VCD files.  If an output filename is not specified, the VCD is emitted to stdout.
 
 .SH "OPTIONS"
 .LP
 .TP
 \fB\-f,\-\-fstname\fR <\fIfilename\fP>
 Specify FST input filename.
+.TP
+\fB\-o,\-\-output\fR <\fIfilename\fP>
+Specify optional VCD output filename.
 .TP
 \fB\-h,\-\-help\fR
 Display help then exit.
